<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.calpoly.flipted.ui.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/navbar"
        style="@style/MainNavigationBarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="80dp"
        android:layout_width="match_parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/goals_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Goals" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/classes_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classes" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myteam_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Team" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/marketplace_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Marketplace" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/leaderboard_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leaderboard" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/myprogress_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Progress" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/main_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"
        android:layout_width="0dp">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.constraintlayout.widget.ConstraintLayout>