...
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="800dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_corner"
            android:textAllCaps="false"
            android:text="Add New Goal"
            android:fontFamily="sans-serif-black"
            android:textSize="20dp"
            android:textColor="@android:color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
...
