...
            android:layout_marginEnd="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:layout_height="0dp"

            app:layout_constraintBottom_toTopOf="@id/newGoalButton"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent">

...
